[package]
name = "ced"
version = "0.1.0"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018"
default-run = "ced"

[lib]
name = "ced"
path = "src/lib.rs"

[features]
default = ["term"]
term = ["crossterm"]

[dependencies]
bstr = "0.2"
channel = { version = "0.4", package = "crossbeam-channel" }
clap = "2.33"
dirs = "2.0"
env_logger = "0.7"
ignore = "0.4"
log = "0.4"
mio = "0.6"
ornament = "0.2"
rbtset = "1.0"
regex = "1.3"
remote = { path = "../remote", package = "ced-remote" }
rlua = "0.17"
unicode-segmentation = "1.6"

crossterm = { version = "0.13", optional = true } # TODO https://github.com/crossterm-rs/crossterm/wiki/Upgrade-from-0.13-to-0.14

[dev-dependencies]
async-std = "1.4"
itertools = "0.8"