[package]
name = "ced"
version = "0.1.0"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018"
default-run = "ced"

[lib]
name = "ced"
path = "src/lib.rs"

[features]
default = ["term"]
term = ["crossterm"]

[dependencies]
async-channel = "~1.6"
async-executor = "~1.4"
blocking = "~1.0"
bstr = "0.2"
clap = "~2.33"
dirs = "~3.0"
env_logger = "0.9"
futures-lite = "~1.12"
ignore = "0.4"
log = "0.4"
ornament = "0.2"
rbtset = "~1.0"
regex = "~1.5"
remote = { path = "../remote", package = "ced-remote" }
rlua = "0.18"

crossterm = { version = "0.21", features = ["event-stream"], optional = true }