[package]
name = "remote-ffi"
version = "0.1.0"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018"

[lib]
name = "ced_remote"
crate-type = ["cdylib"]
doc = false

[dependencies]
futures-lite = "~1.11"
remote = { path = "../remote", package = "ced-remote" }

[build-dependencies]
cbindgen = "0.18"
ffigen = { path = "../remote-ffi-gen", package = "remote-ffi-gen" }