[package]
name = "ced-remote"
version = "0.1.0"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018"

[dependencies]
crossbeam-channel = "0.3"
failure = "0.1"
lazy_static = "1.3"
log = "0.4"
mio = "0.6"
ornament = { version = "0.1", features = ["serde_support"] }
regex = "1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(unix)'.dependencies]
mio-uds = "0.6"

[target.'cfg(windows)'.dependencies]
mio-named-pipes = "0.1"
mio-uds-windows = { git = "https://github.com/Azure/mio-uds-windows" }
winapi = "0.3"
