[package]
name = "ced-remote"
version = "0.1.0"
authors = ["Martin Chaine <martin@casimir.me>"]
edition = "2018"

[dependencies]
async-channel = "1.4"
async-io = "1.0"
async-net = "1.2"
futures-lite = "1.4"
lazy_static = "1.4"
log = "0.4"
ornament = { version = "0.2", features = ["serde_support"] }
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
uds_windows  = "0.1"
winapi = "0.3"
